fix contact form checkbox alignment

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -129,4 +129,9 @@ input::placeholder {
   .contact__form--group {
     flex-direction: row;
   }
+
+  .contact__form--group:last-of-type {
+ 
+  align-items: center;
+}
 }
